0.2.1 ()
=====
* Changed types to match new ocaml-ogg's API.
  Should be fully backward compatible.

0.2.0 (04-07-2011)
=====
* Added decoding module for the new Ogg_demuxer module
* Implement new Out_of_sync exception
* Efficient seeking support

0.1.2 (14-10-2009)
=====
* Added support for --enable-debugging configure option
* Makefile now honnors LIBDIRS
  variable for linking against libraries
  located in other places than then standard
  ones.
* Added prefix to main compilation variables
  if passed to configure.
* Added NO_CUSTOM to build
  in standard mode.

0.1.1 (30-03-2009)
=====
* Fixed Makefile for BSD: call $(MAKE) for generating documentation.

0.1.0 (17-02-2009)
=====
* Initial release